--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 7.5rem;
+    padding: rem 7.5rem;
     background-color: #FFFFFF;
     color: #0C66E4;
     z-index: 1000;
@@ -18,6 +18,7 @@
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    cursor: pointer;
 }
 
 .burger-icon {
@@ -64,7 +65,8 @@
 
 @media (min-width: 768px) {
     .navbar{
-        padding: 1rem 3rem;
+        gap: 1rem;
+        padding: 1rem 2rem;
     }
     .burger-icon {
         display: none;
@@ -78,7 +80,8 @@
 
 @media (max-width: 767px) {
     .navbar{
-        padding: 1rem 3rem;
+        gap: 1rem;
+        padding: 1rem 2rem;
     }
     .navbar-links {
         display: none;
